# PBLManager

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  init_db.py  main.py  pyproject.toml  setup.sh
.github/workflows/: pipeline_db_test.yml
frontend/: Dockerfile  index.html
frontend/src/: index.css
frontend/src/components/: AbasSprints.tsx  CardEquipe.tsx  ListaEntregas.tsx
frontend/src/pages/: Dashboard.tsx
frontend/src/routes/: AppRoutes.tsx
frontend/src/types/: equipes.ts  sprints.ts
scripts/consulta/: criar_views.sql  scripts_principais_consultas.sql  vw_visao_geral_equipes.sql
scripts/criacao/: criar_tabelas.sql
scripts/criação/: criar_tabelas.sql
scripts/functions/: func_Alunos_Em_Turma.sql  func_Professor_Por_Id.sql  func_Sprints_Projeto.sql  func_busca_link_GitHub.sql  func_obter_Média_Equipe.sql
scripts/procedures/: criar_proxima_sprint.sql  matricular_aluno_turma.sql  reprovar_por_falta_evasao.sql
scripts/seeds/: popular_tabelas.sql
scripts/triggers/: trg_garantia_aluno_matriculado.sql  trg_mudanca_status_por_feedback.sql  trg_restricao_aluno_equipes.sql
scripts/views/: vw_acompanhamento_sprints.sql  vw_feedbacks_e_criterios.sql  vw_visao_geral_equipes.sql
tests/: conftest.py  test_database.py
