[project]
name = "pblmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
]

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "testcontainers-postgres>=0.0.1rc1",
]
